Hide content adder dropdown, added buttons instead.

--- a/ulearn/theme/scss/_hidden.scss
+++ b/ulearn/theme/scss/_hidden.scss
@@ -4,3 +4,6 @@
 // Amagar estats
 li > a#plone-contentmenu-workflow {display: none}
 .section-Members li > a#plone-contentmenu-workflow {display: block;}
+
+// Amagar afegir tipus
+li > a#plone-contentmenu-factories {display: none}
