--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -553,3 +553,8 @@ border-color: #34495E;
 .subsection-events {
   #menusup {max-width: 726px;}
 }
+
+.contentaddtoolbar {
+  margin-top: 10px;
+  text-align: center;
+}
