--- a/ulearn/theme/stylesheets/ulearn.css
+++ b/ulearn/theme/stylesheets/ulearn.css
@@ -128,7 +128,7 @@ a [class*=" fa-icon-"] {
 /* line 102, ../../../../genweb.theme/genweb/theme/bootstrap/scss/compass_twitter_bootstrap/_font-awesome.scss */
 .fa-icon-border {
   border: solid 1px #eeeeee;
-  padding: .2em .25em .15em;
+  padding: 0.2em 0.25em 0.15em;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   border-radius: 3px;
@@ -2405,9 +2405,9 @@ div.token-input-dropdown-facebook {
   width: 400px;
   background-color: #fff;
   overflow: hidden;
-  border-left: 1px solid #ccc;
-  border-right: 1px solid #ccc;
-  border-bottom: 1px solid #ccc;
+  border-left: 1px solid #cccccc;
+  border-right: 1px solid #cccccc;
+  border-bottom: 1px solid #cccccc;
   cursor: default;
   font-size: 13px;
   font-family: Verdana;
@@ -2461,8 +2461,8 @@ div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-faceb
 /* line 5, ../scss/_maxui.scss */
 #maxui-container {
   color: #444444;
-  font: 13px/18px 'Open Sans', serif;
-  text-shadow: 0 1px #FFFFFF;
+  font: 13px/18px "Open Sans", serif;
+  text-shadow: 0 1px white;
   border: 0 none;
   box-shadow: -1px 1px 2px #dddddd;
 }
@@ -2470,7 +2470,7 @@ div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-faceb
 /* line 12, ../scss/_maxui.scss */
 #maxui-container a {
   color: #007BC0;
-  font-family: 'Open Sans', serif;
+  font-family: "Open Sans", serif;
 }
 
 /* line 16, ../scss/_maxui.scss */
@@ -2493,7 +2493,7 @@ div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-faceb
 
 /* line 26, ../scss/_maxui.scss */
 #maxui-timeline {
-  background: none repeat scroll 0 0 #FFFFFF;
+  background: none repeat scroll 0 0 white;
   clear: both;
   margin: 0;
   overflow: hidden;
@@ -2502,7 +2502,7 @@ div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-faceb
 
 /* line 33, ../scss/_maxui.scss */
 #maxui-newactivity {
-  background: none repeat scroll 0 0 #34495E;
+  background: none repeat scroll 0 0 #34495e;
   padding: 10px;
   position: relative;
 }
@@ -2513,7 +2513,7 @@ div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-faceb
   border-radius: 3px 3px 3px 3px;
   box-shadow: 0;
   color: #444444;
-  font-family: 'Open Sans', serif;
+  font-family: "Open Sans", serif;
   font-size: 13px;
   height: 48px;
   line-height: 18px;
@@ -2527,7 +2527,7 @@ div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-faceb
 
 /* line 54, ../scss/_maxui.scss */
 #maxui-search {
-  background: none repeat scroll 0 0 #DEDED6;
+  background: none repeat scroll 0 0 #deded6;
   border-bottom: 0 none;
   border-top: 0 none;
   padding: 10px 30px 10px 10px;
@@ -2536,9 +2536,9 @@ div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-faceb
 /* line 60, ../scss/_maxui.scss */
 #maxui-search-text {
   -moz-appearance: none;
-  border: 1px solid #B2B2B2;
+  border: 1px solid #b2b2b2;
   color: #666666;
-  font-family: 'Open Sans', serif;
+  font-family: "Open Sans", serif;
   font-size: 13px;
   height: 24px;
   line-height: 20px;
@@ -2589,7 +2589,7 @@ div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-faceb
 
 /* line 102, ../scss/_maxui.scss */
 #maxui-back-conversations, #maxui-show-conversations {
-  background: none repeat scroll 0 0 #F5F5F5;
+  background: none repeat scroll 0 0 whitesmoke;
   border-bottom: 0 none;
   height: 18px;
   padding-bottom: 3px;
@@ -2603,7 +2603,7 @@ div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-faceb
 
 /* line 112, ../scss/_maxui.scss */
 input.maxui-button {
-  background: none repeat scroll 0 0 #F58D3D;
+  background: none repeat scroll 0 0 #f58d3d;
   border: 0 none;
   border-radius: 4px 4px 4px 4px;
   color: #FFFFFF;
@@ -2626,13 +2626,13 @@ input.maxui-button:hover, input.maxui-button:hover, input.maxui-button:focus, in
 
 /* line 131, ../scss/_maxui.scss */
 input.maxui-button[disabled] {
-  background: none repeat scroll 0 0 #E5E5E5;
+  background: none repeat scroll 0 0 #e5e5e5;
   border: 0;
   border-radius: 4px 4px 4px 4px;
   box-shadow: none;
   color: #666666;
   cursor: default;
-  text-shadow: 0 1px #FFFFFF;
+  text-shadow: 0 1px white;
 }
 
 /* line 140, ../scss/_maxui.scss */
@@ -2642,7 +2642,7 @@ input.maxui-button[disabled] {
 
 /* line 143, ../scss/_maxui.scss */
 #maxui-container textarea:focus, #maxui-container input[type="search"]:focus {
-  border: 1px solid #F58D3D !important;
+  border: 1px solid #f58d3d !important;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05) inset, 0 0 8px rgba(100, 123, 192, 0.5) !important;
 }
 
@@ -2673,14 +2673,14 @@ h1, h2, h3, label {
 
 /* line 36, ../scss/_overrides.scss */
 .liniaDalt, .tileHeadline {
-  border-top: 1px solid #DDDDDD;
+  border-top: 1px solid #dddddd;
   box-shadow: none;
   padding: 10px 0;
 }
 
 /* line 41, ../scss/_overrides.scss */
 .liniaBaix, .documentFirstHeading {
-  border-bottom: 1px solid #DDDDDD;
+  border-bottom: 1px solid #dddddd;
   box-shadow: none;
   margin: 0 0 15px;
   padding: 0 0 5px;
@@ -2767,6 +2767,11 @@ li > a#plone-contentmenu-workflow {
 /* line 6, ../scss/_hidden.scss */
 .section-Members li > a#plone-contentmenu-workflow {
   display: block;
+}
+
+/* line 9, ../scss/_hidden.scss */
+li > a#plone-contentmenu-factories {
+  display: none;
 }
 
 /* line 16, ../scss/_arrows.scss */
@@ -2928,9 +2933,9 @@ li > a#plone-contentmenu-workflow {
   border-radius: 4px;
   opacity: 0.96;
   filter: alpha(opacity=96);
-  border-bottom: 1px solid #CCCCCC;
-  border-left: 1px solid #EEEEEE;
-  border-right: 1px solid #EEEEEE;
+  border-bottom: 1px solid #cccccc;
+  border-left: 1px solid #eeeeee;
+  border-right: 1px solid #eeeeee;
   padding: 20px;
 }
 
@@ -3136,7 +3141,7 @@ li > a#plone-contentmenu-workflow {
 /* line 147, ../scss/_plugins.scss */
 .alertify {
   background: #FFF;
-  border: 1px solid #8E8E8E;
+  border: 1px solid #8e8e8e;
   /* browsers that don't support rgba */
   border: 1px solid rgba(0, 0, 0, 0.3);
   border-radius: 6px;
@@ -3176,7 +3181,7 @@ li > a#plone-contentmenu-workflow {
   border-radius: 4px;
   padding: 8px;
   background-color: #FFF;
-  border: 1px solid #CCC;
+  border: 1px solid #cccccc;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
 }
 
@@ -3191,9 +3196,9 @@ li > a#plone-contentmenu-workflow {
 .alertify-buttons {
   padding: 14px 15px 15px;
   background: #F5F5F5;
-  border-top: 1px solid #DDD;
+  border-top: 1px solid #dddddd;
   border-radius: 0 0 6px 6px;
-  box-shadow: inset 0 1px 0 #FFF;
+  box-shadow: inset 0 1px 0 white;
   text-align: right;
 }
 
@@ -3218,7 +3223,7 @@ li > a#plone-contentmenu-workflow {
 /* line 208, ../scss/_plugins.scss */
 .alertify-button:focus {
   outline: none;
-  box-shadow: 0 0 5px #2B72D5;
+  box-shadow: 0 0 5px #2b72d5;
 }
 
 /* line 212, ../scss/_plugins.scss */
@@ -3234,7 +3239,7 @@ li > a#plone-contentmenu-workflow {
 .alertify-button-cancel:active {
   text-shadow: 0 -1px 0 rgba(255, 255, 255, 0.75);
   background-color: #E6E6E6;
-  border: 1px solid #BBB;
+  border: 1px solid #bbbbbb;
   color: #333;
   background-image: -webkit-linear-gradient(top, white, #e6e6e6);
   background-image: -moz-linear-gradient(top, white, #e6e6e6);
@@ -3257,8 +3262,8 @@ li > a#plone-contentmenu-workflow {
 .alertify-button-ok:active {
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
   background-color: #04C;
-  border: 1px solid #04C;
-  border-color: #04C #04C #002A80;
+  border: 1px solid #0044cc;
+  border-color: #0044cc #0044cc #002a80;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
   color: #FFF;
 }
@@ -3277,32 +3282,32 @@ li > a#plone-contentmenu-workflow {
   border-radius: 4px;
   color: #3A8ABF;
   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
-  border: 1px solid #BCE8F1;
+  border: 1px solid #bce8f1;
 }
 
 /* line 260, ../scss/_plugins.scss */
 .alertify-log-error {
   color: #B94A48;
   background: #F2DEDE;
-  border: 1px solid #EED3D7;
+  border: 1px solid #eed3d7;
 }
 
 /* line 265, ../scss/_plugins.scss */
 .alertify-log-success {
   color: #468847;
   background: #DFF0D8;
-  border: 1px solid #D6E9C6;
+  border: 1px solid #d6e9c6;
 }
 
 /* line 28, ../scss/ulearn.scss */
 body {
   background: #eae9e4;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 
 /* line 33, ../scss/ulearn.scss */
 input, button, select, textarea {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 
 /* line 36, ../scss/ulearn.scss */
@@ -3414,7 +3419,7 @@ input[type="text"]:focus {
   padding: 5px 10px 10px;
   clear: both;
   margin-bottom: 20px;
-  box-shadow: -1px 1px 2px #ddd;
+  box-shadow: -1px 1px 2px #dddddd;
 }
 
 /* line 125, ../scss/ulearn.scss */
@@ -3451,7 +3456,7 @@ input[type="text"]:focus {
 
 /* line 142, ../scss/ulearn.scss */
 .novetat {
-  background: none repeat scroll 0 0 #34495E;
+  background: none repeat scroll 0 0 #34495e;
 }
 
 /* line 145, ../scss/ulearn.scss */
@@ -3473,7 +3478,7 @@ input[type="text"]:focus {
 
 /* line 157, ../scss/ulearn.scss */
 .nav-pills > li > a {
-  background: none repeat scroll 0 0 #DEDED6;
+  background: none repeat scroll 0 0 #deded6;
   color: #34495E;
   text-decoration: none;
   text-shadow: 1px 1px 0px white;
@@ -3489,7 +3494,7 @@ input[type="text"]:focus {
 /* line 168, ../scss/ulearn.scss */
 .num {
   background: none repeat scroll 0 0 #f58d3d;
-  border-left: 1px solid #eee;
+  border-left: 1px solid #eeeeee;
   border-radius: 0 5px 5px 0;
   color: white;
   float: right;
@@ -3499,7 +3504,7 @@ input[type="text"]:focus {
   margin-top: -8px;
   padding: 7px 5px 5px;
   text-align: center;
-  text-shadow: 1px 1px 0 #92480F;
+  text-shadow: 1px 1px 0 #92480f;
   width: 33px;
 }
 
@@ -3525,7 +3530,7 @@ input[type="text"]:focus {
 /* line 196, ../scss/ulearn.scss */
 #miniatures img {
   max-width: 44px;
-  transition: all 0.10s ease 0s;
+  transition: all 0.1s ease 0s;
 }
 
 /* line 200, ../scss/ulearn.scss */
@@ -3602,7 +3607,7 @@ input[type="text"]:focus {
   padding-bottom: 7px;
   padding-top: 13px;
   text-align: center;
-  text-shadow: 1px 1px 0 #92480F;
+  text-shadow: 1px 1px 0 #92480f;
   margin-bottom: 0;
 }
 /* line 280, ../scss/ulearn.scss */
@@ -3651,7 +3656,7 @@ input[type="text"]:focus {
 
 /* line 302, ../scss/ulearn.scss */
 #calendari {
-  background: none repeat scroll 0 0 #F5F5F5;
+  background: none repeat scroll 0 0 whitesmoke;
   margin-top: 10px;
   padding: 5px 5px 10px;
   text-shadow: 1px 1px 0 white;
@@ -3663,7 +3668,7 @@ input[type="text"]:focus {
 
 /* line 313, ../scss/ulearn.scss */
 #box_agenda .hiddenStructure {
-  background: none repeat scroll 0 0 #EAE9E4;
+  background: none repeat scroll 0 0 #eae9e4;
   color: black;
   margin-bottom: 5px;
   padding: 1px;
@@ -3689,7 +3694,7 @@ input[type="text"]:focus {
 }
 /* line 326, ../scss/ulearn.scss */
 #box_agenda li {
-  border-bottom: 1px solid #EEEEEE;
+  border-bottom: 1px solid #eeeeee;
   font-size: 13px;
   line-height: 15px;
   margin-bottom: 8px;
@@ -3798,12 +3803,12 @@ input[type="text"]:focus {
 #communitylist li {
   min-height: 55px;
   line-height: 20px;
-  border-bottom: 1px solid #DDDDDD;
+  border-bottom: 1px solid #dddddd;
   margin-bottom: 0;
   padding-bottom: 15px;
   padding-left: 10px;
   padding-top: 10px;
-  background: none repeat scroll 0 0 #FFFFFF;
+  background: none repeat scroll 0 0 white;
   box-shadow: none;
 }
 /* line 414, ../scss/ulearn.scss */
@@ -3831,7 +3836,7 @@ input[type="text"]:focus {
 /* line 433, ../scss/ulearn.scss */
 #communitylist img:hover {
   transition: all 0.25s ease 0s;
-  border: 2px solid #F58D3D;
+  border: 2px solid #f58d3d;
 }
 
 /* line 439, ../scss/ulearn.scss */
@@ -3869,12 +3874,6 @@ input[type="text"]:focus {
 /* line 459, ../scss/ulearn.scss */
 .template-communities #content {
   background-color: white;
-}
-
-/* line 460, ../scss/ulearn.scss */
-.template-communities h1 {
-  margin: 0 0 20px 20px;
-  padding-top: 20px;
 }
 
 /* line 461, ../scss/ulearn.scss */
@@ -4010,4 +4009,10 @@ input[type="text"]:focus {
 .subsection-eventos #menusup,
 .subsection-events #menusup {
   max-width: 726px;
+}
+
+/* line 557, ../scss/ulearn.scss */
+.contentaddtoolbar {
+  margin-top: 10px;
+  text-align: center;
 }
