--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -558,3 +558,10 @@ border-color: #34495E;
   margin-top: 10px;
   text-align: center;
 }
+
+#box_econnect {
+  .icons { margin-top: 10px; }
+  li {
+    list-style: none;
+  }
+}
