--- a/ulearn/theme/stylesheets/ulearn.css
+++ b/ulearn/theme/stylesheets/ulearn.css
@@ -2576,7 +2576,7 @@ div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-faceb
 /* line 92, ../scss/_maxui.scss */
 .maxui-avatar {
   float: left;
-  left: -60px;
+  left: -55px;
   max-width: 100%;
   position: absolute;
   top: 0;
@@ -2644,6 +2644,11 @@ input.maxui-button[disabled] {
 #maxui-container textarea:focus, #maxui-container input[type="search"]:focus {
   border: 1px solid #f58d3d !important;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05) inset, 0 0 8px rgba(100, 123, 192, 0.5) !important;
+}
+
+/* line 148, ../scss/_maxui.scss */
+#maxui-search-filters .maxui-filter .close {
+  top: 0;
 }
 
 @media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min--moz-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 2 / 1), only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx) {
@@ -2757,6 +2762,20 @@ h1, h2, h3, label {
 #caltitle select,
 #calyear select {
   width: 155px;
+}
+
+@media only screen and (max-width: 979px) and (orientation: portrait), only screen and (max-width: 979px) and (orientation: landscape) {
+  /* line 88, ../scss/_overrides.scss */
+  nav#portal-personaltools-wrapper {
+    margin-top: 36px !important;
+  }
+}
+
+@media only screen and (max-width: 979px) and (orientation: portrait), only screen and (max-width: 979px) and (orientation: landscape) {
+  /* line 96, ../scss/_overrides.scss */
+  #portal-personaltools-wrapper li[role=menuitem] {
+    z-index: 1000;
+  }
 }
 
 /* line 5, ../scss/_hidden.scss */
@@ -4015,4 +4034,13 @@ input[type="text"]:focus {
 .contentaddtoolbar {
   margin-top: 10px;
   text-align: center;
+}
+
+/* line 563, ../scss/ulearn.scss */
+#box_econnect .icons {
+  margin-top: 10px;
+}
+/* line 564, ../scss/ulearn.scss */
+#box_econnect li {
+  list-style: none;
 }
