--- a/ulearn/theme/scss/_hidden.scss
+++ b/ulearn/theme/scss/_hidden.scss
@@ -3,7 +3,9 @@
 
 // Amagar estats
 li > a#plone-contentmenu-workflow {display: none}
+li > .noMenuAction {display: none}
 .section-Members li > a#plone-contentmenu-workflow {display: block;}
 
 // Amagar afegir tipus
-li > a#plone-contentmenu-factories {display: none}
+// Reposat JO dixit
+// li > a#plone-contentmenu-factories {display: none}
