Fix personal information for FF

--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -576,3 +576,7 @@ border-color: #34495E;
 
 .favoritedisabled i {color: #eee}
 #communitylist .anycommunities a {color: #007BC0}
+
+.template-personal-information {
+  .customfile { clear: both; }
+}
