--- a/ulearn/theme/stylesheets/ulearn.css
+++ b/ulearn/theme/stylesheets/ulearn.css
@@ -128,7 +128,7 @@ a [class*=" fa-icon-"] {
 /* line 102, ../../../../genweb.theme/genweb/theme/bootstrap/scss/compass_twitter_bootstrap/_font-awesome.scss */
 .fa-icon-border {
   border: solid 1px #eeeeee;
-  padding: 0.2em 0.25em 0.15em;
+  padding: .2em .25em .15em;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   border-radius: 3px;
@@ -2405,9 +2405,9 @@ div.token-input-dropdown-facebook {
   width: 400px;
   background-color: #fff;
   overflow: hidden;
-  border-left: 1px solid #cccccc;
-  border-right: 1px solid #cccccc;
-  border-bottom: 1px solid #cccccc;
+  border-left: 1px solid #ccc;
+  border-right: 1px solid #ccc;
+  border-bottom: 1px solid #ccc;
   cursor: default;
   font-size: 13px;
   font-family: Verdana;
@@ -2461,8 +2461,8 @@ div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-faceb
 /* line 5, ../scss/_maxui.scss */
 #maxui-container {
   color: #444444;
-  font: 13px/18px "Open Sans", serif;
-  text-shadow: 0 1px white;
+  font: 13px/18px 'Open Sans', serif;
+  text-shadow: 0 1px #FFFFFF;
   border: 0 none;
   box-shadow: -1px 1px 2px #dddddd;
 }
@@ -2470,7 +2470,7 @@ div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-faceb
 /* line 12, ../scss/_maxui.scss */
 #maxui-container a {
   color: #007BC0;
-  font-family: "Open Sans", serif;
+  font-family: 'Open Sans', serif;
 }
 
 /* line 16, ../scss/_maxui.scss */
@@ -2493,7 +2493,7 @@ div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-faceb
 
 /* line 26, ../scss/_maxui.scss */
 #maxui-timeline {
-  background: none repeat scroll 0 0 white;
+  background: none repeat scroll 0 0 #FFFFFF;
   clear: both;
   margin: 0;
   overflow: hidden;
@@ -2502,7 +2502,7 @@ div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-faceb
 
 /* line 33, ../scss/_maxui.scss */
 #maxui-newactivity {
-  background: none repeat scroll 0 0 #34495e;
+  background: none repeat scroll 0 0 #34495E;
   padding: 10px;
   position: relative;
 }
@@ -2513,7 +2513,7 @@ div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-faceb
   border-radius: 3px 3px 3px 3px;
   box-shadow: 0;
   color: #444444;
-  font-family: "Open Sans", serif;
+  font-family: 'Open Sans', serif;
   font-size: 13px;
   height: 48px;
   line-height: 18px;
@@ -2527,7 +2527,7 @@ div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-faceb
 
 /* line 54, ../scss/_maxui.scss */
 #maxui-search {
-  background: none repeat scroll 0 0 #deded6;
+  background: none repeat scroll 0 0 #DEDED6;
   border-bottom: 0 none;
   border-top: 0 none;
   padding: 10px 30px 10px 10px;
@@ -2536,9 +2536,9 @@ div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-faceb
 /* line 60, ../scss/_maxui.scss */
 #maxui-search-text {
   -moz-appearance: none;
-  border: 1px solid #b2b2b2;
+  border: 1px solid #B2B2B2;
   color: #666666;
-  font-family: "Open Sans", serif;
+  font-family: 'Open Sans', serif;
   font-size: 13px;
   height: 24px;
   line-height: 20px;
@@ -2589,7 +2589,7 @@ div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-faceb
 
 /* line 102, ../scss/_maxui.scss */
 #maxui-back-conversations, #maxui-show-conversations {
-  background: none repeat scroll 0 0 whitesmoke;
+  background: none repeat scroll 0 0 #F5F5F5;
   border-bottom: 0 none;
   height: 18px;
   padding-bottom: 3px;
@@ -2603,7 +2603,7 @@ div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-faceb
 
 /* line 112, ../scss/_maxui.scss */
 input.maxui-button {
-  background: none repeat scroll 0 0 #f58d3d;
+  background: none repeat scroll 0 0 #F58D3D;
   border: 0 none;
   border-radius: 4px 4px 4px 4px;
   color: #FFFFFF;
@@ -2626,13 +2626,13 @@ input.maxui-button:hover, input.maxui-button:hover, input.maxui-button:focus, in
 
 /* line 131, ../scss/_maxui.scss */
 input.maxui-button[disabled] {
-  background: none repeat scroll 0 0 #e5e5e5;
+  background: none repeat scroll 0 0 #E5E5E5;
   border: 0;
   border-radius: 4px 4px 4px 4px;
   box-shadow: none;
   color: #666666;
   cursor: default;
-  text-shadow: 0 1px white;
+  text-shadow: 0 1px #FFFFFF;
 }
 
 /* line 140, ../scss/_maxui.scss */
@@ -2642,7 +2642,7 @@ input.maxui-button[disabled] {
 
 /* line 143, ../scss/_maxui.scss */
 #maxui-container textarea:focus, #maxui-container input[type="search"]:focus {
-  border: 1px solid #f58d3d !important;
+  border: 1px solid #F58D3D !important;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05) inset, 0 0 8px rgba(100, 123, 192, 0.5) !important;
 }
 
@@ -2678,14 +2678,14 @@ h1, h2, h3, label {
 
 /* line 36, ../scss/_overrides.scss */
 .liniaDalt, .tileHeadline {
-  border-top: 1px solid #dddddd;
+  border-top: 1px solid #DDDDDD;
   box-shadow: none;
   padding: 10px 0;
 }
 
 /* line 41, ../scss/_overrides.scss */
 .liniaBaix, .documentFirstHeading {
-  border-bottom: 1px solid #dddddd;
+  border-bottom: 1px solid #DDDDDD;
   box-shadow: none;
   margin: 0 0 15px;
   padding: 0 0 5px;
@@ -2945,9 +2945,9 @@ li > .noMenuAction {
   border-radius: 4px;
   opacity: 0.96;
   filter: alpha(opacity=96);
-  border-bottom: 1px solid #cccccc;
-  border-left: 1px solid #eeeeee;
-  border-right: 1px solid #eeeeee;
+  border-bottom: 1px solid #CCCCCC;
+  border-left: 1px solid #EEEEEE;
+  border-right: 1px solid #EEEEEE;
   padding: 20px;
 }
 
@@ -3153,7 +3153,7 @@ li > .noMenuAction {
 /* line 147, ../scss/_plugins.scss */
 .alertify {
   background: #FFF;
-  border: 1px solid #8e8e8e;
+  border: 1px solid #8E8E8E;
   /* browsers that don't support rgba */
   border: 1px solid rgba(0, 0, 0, 0.3);
   border-radius: 6px;
@@ -3193,7 +3193,7 @@ li > .noMenuAction {
   border-radius: 4px;
   padding: 8px;
   background-color: #FFF;
-  border: 1px solid #cccccc;
+  border: 1px solid #CCC;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
 }
 
@@ -3208,9 +3208,9 @@ li > .noMenuAction {
 .alertify-buttons {
   padding: 14px 15px 15px;
   background: #F5F5F5;
-  border-top: 1px solid #dddddd;
+  border-top: 1px solid #DDD;
   border-radius: 0 0 6px 6px;
-  box-shadow: inset 0 1px 0 white;
+  box-shadow: inset 0 1px 0 #FFF;
   text-align: right;
 }
 
@@ -3235,7 +3235,7 @@ li > .noMenuAction {
 /* line 208, ../scss/_plugins.scss */
 .alertify-button:focus {
   outline: none;
-  box-shadow: 0 0 5px #2b72d5;
+  box-shadow: 0 0 5px #2B72D5;
 }
 
 /* line 212, ../scss/_plugins.scss */
@@ -3251,7 +3251,7 @@ li > .noMenuAction {
 .alertify-button-cancel:active {
   text-shadow: 0 -1px 0 rgba(255, 255, 255, 0.75);
   background-color: #E6E6E6;
-  border: 1px solid #bbbbbb;
+  border: 1px solid #BBB;
   color: #333;
   background-image: -webkit-linear-gradient(top, white, #e6e6e6);
   background-image: -moz-linear-gradient(top, white, #e6e6e6);
@@ -3274,8 +3274,8 @@ li > .noMenuAction {
 .alertify-button-ok:active {
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
   background-color: #04C;
-  border: 1px solid #0044cc;
-  border-color: #0044cc #0044cc #002a80;
+  border: 1px solid #04C;
+  border-color: #04C #04C #002A80;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
   color: #FFF;
 }
@@ -3294,32 +3294,32 @@ li > .noMenuAction {
   border-radius: 4px;
   color: #3A8ABF;
   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
-  border: 1px solid #bce8f1;
+  border: 1px solid #BCE8F1;
 }
 
 /* line 260, ../scss/_plugins.scss */
 .alertify-log-error {
   color: #B94A48;
   background: #F2DEDE;
-  border: 1px solid #eed3d7;
+  border: 1px solid #EED3D7;
 }
 
 /* line 265, ../scss/_plugins.scss */
 .alertify-log-success {
   color: #468847;
   background: #DFF0D8;
-  border: 1px solid #d6e9c6;
+  border: 1px solid #D6E9C6;
 }
 
 /* line 28, ../scss/ulearn.scss */
 body {
   background: #eae9e4;
-  font-family: "Open Sans", sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
 /* line 33, ../scss/ulearn.scss */
 input, button, select, textarea {
-  font-family: "Open Sans", sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
 /* line 36, ../scss/ulearn.scss */
@@ -3439,7 +3439,7 @@ input[type="text"]:focus {
   padding: 5px 10px 10px;
   clear: both;
   margin-bottom: 20px;
-  box-shadow: -1px 1px 2px #dddddd;
+  box-shadow: -1px 1px 2px #ddd;
 }
 
 /* line 129, ../scss/ulearn.scss */
@@ -3476,7 +3476,7 @@ input[type="text"]:focus {
 
 /* line 146, ../scss/ulearn.scss */
 .novetat {
-  background: none repeat scroll 0 0 #34495e;
+  background: none repeat scroll 0 0 #34495E;
 }
 
 /* line 149, ../scss/ulearn.scss */
@@ -3498,7 +3498,7 @@ input[type="text"]:focus {
 
 /* line 161, ../scss/ulearn.scss */
 .nav-pills > li > a {
-  background: none repeat scroll 0 0 #deded6;
+  background: none repeat scroll 0 0 #DEDED6;
   color: #34495E;
   text-decoration: none;
   text-shadow: 1px 1px 0px white;
@@ -3514,7 +3514,7 @@ input[type="text"]:focus {
 /* line 172, ../scss/ulearn.scss */
 .num {
   background: none repeat scroll 0 0 #f58d3d;
-  border-left: 1px solid #eeeeee;
+  border-left: 1px solid #eee;
   border-radius: 0 5px 5px 0;
   color: white;
   float: right;
@@ -3524,7 +3524,7 @@ input[type="text"]:focus {
   margin-top: -8px;
   padding: 7px 5px 5px;
   text-align: center;
-  text-shadow: 1px 1px 0 #92480f;
+  text-shadow: 1px 1px 0 #92480F;
   width: 33px;
 }
 
@@ -3550,7 +3550,7 @@ input[type="text"]:focus {
 /* line 200, ../scss/ulearn.scss */
 #miniatures img {
   max-width: 44px;
-  transition: all 0.1s ease 0s;
+  transition: all 0.10s ease 0s;
 }
 
 /* line 204, ../scss/ulearn.scss */
@@ -3627,7 +3627,7 @@ input[type="text"]:focus {
   padding-bottom: 7px;
   padding-top: 13px;
   text-align: center;
-  text-shadow: 1px 1px 0 #92480f;
+  text-shadow: 1px 1px 0 #92480F;
   margin-bottom: 0;
 }
 /* line 284, ../scss/ulearn.scss */
@@ -3676,7 +3676,7 @@ input[type="text"]:focus {
 
 /* line 306, ../scss/ulearn.scss */
 #calendari {
-  background: none repeat scroll 0 0 whitesmoke;
+  background: none repeat scroll 0 0 #F5F5F5;
   margin-top: 10px;
   padding: 5px 5px 10px;
   text-shadow: 1px 1px 0 white;
@@ -3688,7 +3688,7 @@ input[type="text"]:focus {
 
 /* line 317, ../scss/ulearn.scss */
 #box_agenda .hiddenStructure {
-  background: none repeat scroll 0 0 #eae9e4;
+  background: none repeat scroll 0 0 #EAE9E4;
   color: black;
   margin-bottom: 5px;
   padding: 1px;
@@ -3714,7 +3714,7 @@ input[type="text"]:focus {
 }
 /* line 330, ../scss/ulearn.scss */
 #box_agenda li {
-  border-bottom: 1px solid #eeeeee;
+  border-bottom: 1px solid #EEEEEE;
   font-size: 13px;
   line-height: 15px;
   margin-bottom: 8px;
@@ -3823,12 +3823,12 @@ input[type="text"]:focus {
 #communitylist li {
   min-height: 55px;
   line-height: 20px;
-  border-bottom: 1px solid #dddddd;
+  border-bottom: 1px solid #DDDDDD;
   margin-bottom: 0;
   padding-bottom: 15px;
   padding-left: 10px;
   padding-top: 10px;
-  background: none repeat scroll 0 0 white;
+  background: none repeat scroll 0 0 #FFFFFF;
   box-shadow: none;
 }
 /* line 418, ../scss/ulearn.scss */
@@ -3856,7 +3856,7 @@ input[type="text"]:focus {
 /* line 437, ../scss/ulearn.scss */
 #communitylist img:hover {
   transition: all 0.25s ease 0s;
-  border: 2px solid #f58d3d;
+  border: 2px solid #F58D3D;
 }
 
 /* line 443, ../scss/ulearn.scss */
@@ -4060,4 +4060,9 @@ input[type="text"]:focus {
 /* line 578, ../scss/ulearn.scss */
 #communitylist .anycommunities a {
   color: #007BC0;
+}
+
+/* line 581, ../scss/ulearn.scss */
+.template-personal-information .customfile {
+  clear: both;
 }
