--- a/ulearn/theme/stylesheets/ulearn.css
+++ b/ulearn/theme/stylesheets/ulearn.css
@@ -1,4 +1,4 @@
-/*
+/*!
  *  Font Awesome 3.2.1
  *  the fa-iconic font designed for Bootstrap
  *  ------------------------------------------------------------------------------
@@ -3544,7 +3544,7 @@ input[type="text"]:focus {
   overflow-y: hidden;
   display: inline-block;
   margin-bottom: 7px;
-  margin-right: 4px;
+  margin-right: 3px;
 }
 
 /* line 200, ../scss/ulearn.scss */
